[package]
name = "esptimerserver"
version = "0.1.0"
authors = ["yum <yumzi114@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esptimerserver"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
esp-idf-hal = "0.44.1"
esp-println = { version = "0.12.0", features = ["esp32c3"] }
heapless = "0.8.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"
serde_json = "1.0.133"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
